# FuncCell

./: .gitignore  README.md  pyproject.toml
docs/: report_draft.md
models/attention_pooling/: attention_pooling.pt
notebooks/: attention_pooling.ipynb  test_cell_embeddings.ipynb
reference/: census_metadata_discovery.md  embedding_generation.md  gene_mapping_analysis.md  proteinbert_architecture.md
scripts/: create_cell_embeddings.py  discover_metadata.py  download_proteinbert_model.py  generate_embeddings.py  run_data_pipeline.py
src/: __init__.py
src/model/: __init__.py  attention_pooling.py  cell_embeddings.py  proteinbert_embeddings.py
src/preprocess_data/: __init__.py  census_query.py  config.py  gene_list.py  gene_mapping.py  hvg_selection.py
utils/: __init__.py  file_utils.py  logging_utils.py
