[project]
name = "funcCell"
version = "0.1.0"
description = "Single-cell cancer analysis with protein function embeddings"
authors = [
    {name = "Andre Gala-Garza"},
    {name = "Prema Immadisetty"},
    {name = "Jason Zhao"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cellxgene-census>=1.10.0",
    "scanpy>=1.9.0",
    "anndata>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "biopython>=1.81",
    "mygene>=3.2.2",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
